Création de lobjet Ingredient, mise en place des Fixtures

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,7 +10,7 @@
             <p class="lead">SymRecipe est une application qui va te permettre de créer des recettes à la base d'ingrédients que tu aura toi même créer.
                 Tu pourra les partager, ou bien les garder en privées.</p>
             <hr class="my-4">
-            <p>Pour commencer rendez-vou sur la page d'inscription</p>
+            <p>Pour commencer rendez-vous sur la page d'inscription</p>
             <a class="btn btn-primary btn-lg" href="#" role="button">INSCRIPTION</a>
         </div>
     </div>
