Création de twig edit. Flash message de succès dans index. Fonction d'edit dans IngredientController.php

--- a/templates/pages/ingredient/edit.html.twig
+++ b/templates/pages/ingredient/edit.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     <div class="container">
-        <h1 class="mt-4"> Créaction d'un ingrédient </h1>
+        <h1 class="mt-4"> Modificaton de l'ingrédient </h1>
     </div>
     {# Flash message pour l'ajout avec succès #}
     {% for message in app.flashes ('succes') %}
