--- a/templates/pages/ingredient/edit.html.twig
+++ b/templates/pages/ingredient/edit.html.twig
@@ -6,8 +6,8 @@
         <h1 class="mt-4"> Modificaton de l'ingrédient </h1>
     </div>
     {# Flash message pour l'ajout avec succès #}
-    {% for message in app.flashes ('succes') %}
-        <div class=" alert alert-succes">
+    {% for message in app.flashes ('modif') %}
+        <div class=" alert alert-success">
             {{ message }}
         </div>
     {% endfor %}
