--- a/templates/Partials/_header.html.twig
+++ b/templates/Partials/_header.html.twig
@@ -12,9 +12,15 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="{{ path('ingredient.index') }}">Ingrédients
+                    <a class="nav-link active" href="{{ path('ingredient.index') }}"> Mes ingrédients
                         <span class="visually-hidden">(current)</span>
                     </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ path('recipe.index') }}">Mes recettes
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
