--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -6,6 +6,13 @@
     <h1 class="mt-4">
         Formulaire de connexion
     </h1>
+
+    {% for message in app.flashes ('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+
     {% if error %}
         <div class="alert alert-danger mt-4">
             {{ error.messageKey|trans(error.messageData, 'security') }}
