Création de UserController.php, qui va nous permettre de modifier le profil utilisateur ainsi que le mot de passe

--- a/templates/pages/recipe/index.html.twig
+++ b/templates/pages/recipe/index.html.twig
@@ -15,7 +15,7 @@
 
             {# Flash message pour l'ajout avec succès #}
 
-            {% for message in app.flashes ('modify') %}
+            {% for message in app.flashes ('success') %}
                 <div class="alert alert-success mt-4">
                     {{ message }}
                 </div>
