Relation entre enité => User et ingrédient , User et recipe.Affichage uniquement des ingrédient de l'utilisateur dans RecipeType.phpv lors de la création de recette.Dans l'affichage des recettes et des ingrédients on affiche uniquement ceux lié a l'utilisateur. Modification du header pour afficher ou non les recettes et les ingrédients si utilisateur connecté et ajout du dropmenu

--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -15,7 +15,7 @@
 
                 {# Flash message pour l'ajout avec succès #}
                 <div class="container mt-4">
-                    {% for message in app.flashes ('succes') %}
+                    {% for message in app.flashes ('success') %}
                         <div class="alert alert-success">
                             {{ message }}
                         </div>
