PATCH => Affichage des recettes publique pour la communauté => indexpublic controller ainsi que dans le home. Affichage d'un recette => controlle show. Ajout de IsPublic dans Recipe(Ajout ds Fixtures)

--- a/templates/pages/recipe/edit.html.twig
+++ b/templates/pages/recipe/edit.html.twig
@@ -6,7 +6,7 @@
         <h1 class="mt-4"> Modificaton de la recette </h1>
 
     {# Flash message pour l'ajout avec succès #}
-    {% for message in app.flashes ('modify') %}
+    {% for message in app.flashes ('success') %}
         <div class=" alert alert-success">
             {{ message }}
         </div>
