--- a/templates/pages/recipe/show.html.twig
+++ b/templates/pages/recipe/show.html.twig
@@ -15,6 +15,8 @@
         {% endfor %}
 
         <h1 class="mt-4">{{ recipe.name }}</h1>
+
+        <p>L'avis moyen de cette recette est de {{ recipe.average|number_format(2, '.', ',') }}/5 !</p>
         <div>
 			<span class="badge bg-primary">Créée le
 				{{ recipe.createdAt|date('d/m/Y') }}</span>
@@ -66,6 +68,10 @@
             {% for ingredient in recipe.ingredients %}
                 <span class="badge bg-primary">{{ ingredient.name }}</span>
             {% endfor %}
+        </div>
+
+        <div class="mark">
+            {{ form(form) }}
         </div>
     </div>
 {% endblock %}
