Ajout du Bundle vichUploader lors de la création de la recette + modif général

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,10 @@
         {% block header%}
             {% include 'Partials/_header.html.twig' %}
         {% endblock %}
+
+
     {% block body %} {% endblock body %}
+        {% include 'Partials/_footer.html.twig' %}
+
     </body>
 </html>
