--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -11,7 +11,7 @@
                 Tu pourra les partager, ou bien les garder en privées.</p>
             <hr class="my-4">
             <p>Pour commencer rendez-vous sur la page d'inscription</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">INSCRIPTION</a>
+            <a class="btn btn-primary btn-lg" href="{{ path('security.registration') }}" role="button">INSCRIPTION</a>
         </div>
         <div class="recipes">
             <h2 class="mt-4">Recettes de la communauté</h2>
