--- a/templates/pages/ingredient/edit.html.twig
+++ b/templates/pages/ingredient/edit.html.twig
@@ -1,39 +1,38 @@
 {% extends "base.html.twig" %}
 
-{% block body %}
-
-    <div class="container mt-4">
-        <h1 class="mt-4"> Modificaton de l'ingrédient </h1>
-
-    {# Flash message pour l'ajout avec succès #}
-    {% for message in app.flashes ('modif') %}
-        <div class=" alert alert-success">
-            {{ message }}
-        </div>
-    {% endfor %}
-    </div>
-
-    {{ form_start(form) }}
-
-    <div class=" form-group">
-        {{ form_label(form.name) }}
-        {{ form_widget(form.name) }}
-        <div class="form-error">
-            {{ form_errors(form.name) }}
-        </div>
-    </div>
-    <div class=" form-group">
-        {{ form_label(form.price) }}
-        {{ form_widget(form.price) }}
-        <div class="form-error">
-            {{ form_errors(form.price) }}
-        </div>
-    </div>
-    <div class="form-group">
-        {{ form_row(form.submit) }}
-    </div>
-
-
-
-    {{ form_end(form) }}
+{% block title %}SymRecipe - Modification de l'ingrédient
 {% endblock %}
+
+{% block body %}
+    <div class="container">
+
+        <h1 class="mt-4">Modification de l'ingrédient</h1>
+
+        <form name="ingredient" method="post">
+
+            <div class="form-group">
+                {{ form_label(form.name) }}
+                {{ form_widget(form.name) }}
+                <div class="form-error">
+                    {{ form_errors(form.name) }}
+                </div>
+            </div>
+
+            <div class="form-group">
+                {{ form_label(form.price) }}
+                {{ form_widget(form.price) }}
+                <div class="form-error">
+                    {{ form_errors(form.price) }}
+                </div>
+            </div>
+
+            {{ form_row(form._token) }}
+
+            <button type="submit" id="ingredient_submit" name="ingredient[submit]" class="btn btn-primary mt-4">
+                Modifier mon ingrédient
+            </button>
+
+
+
+    </form>
+    </div>{% endblock %}
