--- a/templates/pages/recipe/new.html.twig
+++ b/templates/pages/recipe/new.html.twig
@@ -70,8 +70,10 @@
             </div>
         </div>
 
-        {{ form_row(form.ingredients) }}
+        {{ form_row(form.imageFile) }}
 
+
+        {{ form_row(form.ingredients) }}
 
         {{ form_end(form) }}
 
