Mise en place de test Unitaire

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -6,7 +6,7 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-4">Bienvenue sur SymRecipe</h1>
+            <h1 class="display-4">Bienvenue sur Chef.NET</h1>
             <p class="lead">SymRecipe est une application qui va te permettre de créer des recettes à la base d'ingrédients que tu aura toi même créer.
                 Tu pourra les partager, ou bien les garder en privées.</p>
             <hr class="my-4">
