--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -20,7 +20,7 @@
     {% endif %}
 
     {# ici on appel security.login en post pour pouvoir se connecter, voir firewalls #}
-    <form action="{{ path('security.login') }}" method="post">
+    <form action="{{ path('security.login') }}" method="post" name="login">
         <div>
             <label for="username" class="form-label mt-4">Adresse Email</label>
             <input type="email" class="form-control" id="username" name="_username" placeholder="exemple@deMail.com"
